--- a/index.html
+++ b/index.html
@@ -20,24 +20,44 @@
     </div>
 
     <ul class="task-list-container" id="task-list">
-
-
-        <li class="task-list" id="task1">
-            <span class="task">Example task. You can delete it anyway</span>
-            <button class="delete-btn">
-                <div class="delete-x"></div>
-            </button>
-            <label class="toggle">
-                <input type="checkbox" class="task-checkbox">
-                <span class="button-checkbox"></span>
-            </label>
-        </li>
+        <!-- <li class="task-list" id="task1">
+              <span class="task">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+              <button class="delete-btn">
+                  <div class="delete-x"></div>
+              </button>
+              <label class="toggle">
+                  <input type="checkbox" class="task-checkbox">
+                  <span class="button-checkbox"></span>
+              </label>
+          </li>
+         <li class="task-list" id="task2">
+             <span class="task">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+             <button class="delete-btn">
+                 <div class="delete-x"></div>
+             </button>
+             <label class="toggle">
+                 <input type="checkbox" class="task-checkbox">
+                 <span class="button-checkbox"></span>
+             </label>
+         </li>
+         <li class="task-list" id="task3">
+             <span class="task">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+             <button class="delete-btn">
+                 <div class="delete-x"></div>
+             </button>
+             <label class="toggle">
+                 <input type="checkbox" class="task-checkbox">
+                 <span class="button-checkbox"></span>
+             </label>
+         </li>-->
     </ul>
-
-    <div class="clear-all-tasks-container">
-        <button class="clear-button" id="clear-button">Clear task list</button>
+    <div id="clear-button-container">
+        <div class="clear-button-container">
+            <button class="clear-button" id="clear-button">Clear task list</button>
+        </div>
     </div>
 </div>
+
 
 <script src="script.js"></script>
 </body>
